JVIP-3204 Complete sign-up redesign
Fix CSS includes

--- a/app/index.html
+++ b/app/index.html
@@ -28,14 +28,14 @@
         <link rel="stylesheet" href="styles/font.css">
         <link rel="stylesheet" href="styles/bootstrap.css">
         <link rel="stylesheet" href="styles/bootstrap-responsive.css">
-        <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
         <link rel="stylesheet" href="styles/fixes.css">
         <link rel="stylesheet" href="styles/main.css">
-        <link rel="stylesheet" href="bower_components/BootstrapFormHelpers/css/bootstrap-formhelpers.css">
-        <link rel="stylesheet" href="bower_components/BootstrapFormHelpers/css/bootstrap-formhelpers-countries.flags.css">
-        <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css">
         <link rel="stylesheet" href="styles/ccs.css">
         <!-- endbuild -->
+
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+        <link href="bower_components/BootstrapFormHelpers/css/bootstrap-formhelpers.css" rel="stylesheet">
+        <link href="bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
     </head>
     <body ng-app="signupApp" ng-controller="MainCtrl">
         <!--[if lt IE 9]>
