--- a/app/index.html
+++ b/app/index.html
@@ -172,6 +172,7 @@
         <script src="scripts/directives/accessibleForm.js"></script>
         <script src="scripts/directives/spinner.js"></script>
         <script src="scripts/directives/integer.js"></script>
+        <script src="scripts/filters/nospace.js"></script>
         <!-- endbuild -->
 
         <script type="text/javascript"> 
