--- a/app/index.html
+++ b/app/index.html
@@ -163,6 +163,7 @@
         <script src="scripts/directives/accessibleForm.js"></script>
         <script src="scripts/directives/spinner.js"></script>
         <script src="scripts/directives/integer.js"></script>
+        <script src="scripts/services/WelcomeMail.js"></script>
         <script src="scripts/filters/nospace.js"></script>
         <!-- endbuild -->
 
