--- a/app/index.html
+++ b/app/index.html
@@ -79,14 +79,14 @@
             a.src=g;
             m.parentNode.insertBefore(a,m) })
             (window,document,'script','//www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-XXXXX-X', 'auto');
+            ga('create', 'UA-11120842-1', 'auto');
             ga('require', 'linkid', 'linkid.js');
             ga('require', 'ecommerce', 'ecommerce.js');
 //            ga('require', 'displayfeatures');
         </script>
 
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
-        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
 
         <!-- build:js scripts/plugins.js -->
         <script src="bower_components/bootstrap-sass/js/bootstrap-affix.js"></script>
