JVIP-3753 Signup Confirmation - Implement Ecommerce tracking with Google Analytics
Add enhanced ecommerce reporting

--- a/app/index.html
+++ b/app/index.html
@@ -81,8 +81,8 @@
             (window,document,'script','//www.google-analytics.com/analytics.js','ga');
             ga('create', 'UA-11120842-1', 'auto');
             ga('require', 'linkid', 'linkid.js');
-            ga('require', 'ecommerce', 'ecommerce.js');
-//            ga('require', 'displayfeatures');
+            ga('require', 'ec');
+            ga('require', 'displayfeatures');
         </script>
 
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
